[gd_scene load_steps=4 format=3 uid="uid://bmhuy5v7e77dw"]

[ext_resource type="Script" uid="uid://kjw8oqre4jcs" path="res://Screens/SelectionScreen/TabButtons/TabButton.gd" id="1_tgpue"]
[ext_resource type="Theme" uid="uid://cflls7t5oklv0" path="res://themes/SongSelectionTab.tres" id="2_417wl"]
[ext_resource type="Theme" uid="uid://oe21uoww8ls3" path="res://themes/JuneThemeV1.tres" id="2_ofutj"]

[node name="Botões" type="TabBar"]
focus_neighbor_bottom = NodePath("MarginContainer/VBoxContainer/Settings")
focus_next = NodePath("MarginContainer/VBoxContainer/Difficulties/Facil")
script = ExtResource("1_tgpue")
metadata/_tab_index = 0

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Image" type="TextureRect" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 300)
layout_mode = 2
size_flags_vertical = 0
expand_mode = 1
stretch_mode = 4

[node name="SongName" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 55)
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/normal_font_size = 40
bbcode_enabled = true
autowrap_mode = 1

[node name="AuthorName" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 42)
layout_mode = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(1, 1, 1, 1)
theme_override_constants/shadow_offset_y = 1
theme_override_constants/shadow_offset_x = -1
theme_override_font_sizes/normal_font_size = 30
text = "Autor:"
autowrap_mode = 1

[node name="CreatorName" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 42)
layout_mode = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(1, 1, 1, 1)
theme_override_constants/shadow_offset_y = 1
theme_override_constants/shadow_offset_x = -1
theme_override_font_sizes/normal_font_size = 30
text = "Criado por:"
autowrap_mode = 1

[node name="BPM" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(1, 1, 1, 1)
theme_override_constants/shadow_offset_y = 1
theme_override_constants/shadow_offset_x = -1
theme_override_font_sizes/normal_font_size = 30
text = "BPM:"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="Difficulties" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2

[node name="Facil" type="Button" parent="MarginContainer/VBoxContainer/Difficulties"]
layout_mode = 2
size_flags_horizontal = 3
focus_neighbor_left = NodePath("../Maximus")
focus_neighbor_right = NodePath("../Normal")
focus_neighbor_bottom = NodePath("../../Settings")
focus_next = NodePath("../Normal")
mouse_default_cursor_shape = 2
theme = ExtResource("2_417wl")
theme_override_font_sizes/font_size = 35
disabled = true
toggle_mode = true
text = "Facil
 "

[node name="Normal" type="Button" parent="MarginContainer/VBoxContainer/Difficulties"]
layout_mode = 2
size_flags_horizontal = 3
focus_neighbor_left = NodePath("../Facil")
focus_neighbor_right = NodePath("../Hard")
focus_neighbor_bottom = NodePath("../../Settings")
focus_next = NodePath("../Hard")
mouse_default_cursor_shape = 2
theme = ExtResource("2_417wl")
theme_override_font_sizes/font_size = 35
toggle_mode = true
text = "Normal
 "

[node name="Hard" type="Button" parent="MarginContainer/VBoxContainer/Difficulties"]
layout_mode = 2
size_flags_horizontal = 3
focus_neighbor_left = NodePath("../Normal")
focus_neighbor_right = NodePath("../Maximus")
focus_neighbor_bottom = NodePath("../../Settings")
focus_next = NodePath("../Maximus")
mouse_default_cursor_shape = 2
theme = ExtResource("2_417wl")
theme_override_font_sizes/font_size = 35
toggle_mode = true
button_pressed = true
text = "Hard
 "

[node name="Maximus" type="Button" parent="MarginContainer/VBoxContainer/Difficulties"]
layout_mode = 2
size_flags_horizontal = 3
focus_neighbor_left = NodePath("../Hard")
focus_neighbor_bottom = NodePath("../../Settings")
focus_next = NodePath("../../Settings")
mouse_default_cursor_shape = 2
theme = ExtResource("2_417wl")
theme_override_font_sizes/font_size = 35
disabled = true
toggle_mode = true
text = "Maximus
 "

[node name="Score" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(1, 1, 1, 1)
theme_override_constants/shadow_offset_y = 1
theme_override_constants/shadow_offset_x = -1
theme_override_font_sizes/normal_font_size = 30
text = "Pontuação:"
fit_content = true
autowrap_mode = 0

[node name="Combo" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(1, 1, 1, 1)
theme_override_constants/shadow_offset_y = 1
theme_override_constants/shadow_offset_x = -1
theme_override_font_sizes/normal_font_size = 30
text = "Combo:"
fit_content = true
autowrap_mode = 0

[node name="State" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="StateText" type="RichTextLabel" parent="MarginContainer/VBoxContainer/State"]
layout_mode = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(1, 1, 1, 1)
theme_override_constants/shadow_offset_y = 1
theme_override_constants/shadow_offset_x = -1
theme_override_font_sizes/normal_font_size = 50
text = "Situação: "
fit_content = true
scroll_active = false
autowrap_mode = 0
vertical_alignment = 1

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/State"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
size_flags_horizontal = 2
expand_mode = 1

[node name="Settings" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10
mouse_default_cursor_shape = 2
theme = ExtResource("2_ofutj")
theme_override_font_sizes/font_size = 30
text = "Configurações"

[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="focus_entered" from="MarginContainer/VBoxContainer/Difficulties/Facil" to="." method="_on_facil_focus_entered"]
[connection signal="focus_entered" from="MarginContainer/VBoxContainer/Difficulties/Normal" to="." method="_on_normal_focus_entered"]
[connection signal="focus_entered" from="MarginContainer/VBoxContainer/Difficulties/Hard" to="." method="_on_hard_focus_entered"]
[connection signal="focus_entered" from="MarginContainer/VBoxContainer/Difficulties/Maximus" to="." method="_on_maximus_focus_entered"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Settings" to="." method="_on_settings_pressed"]
